objects/Recruiting_Event__c.object
<CustomObject>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecEventID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecrutingEventID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add School name if applicable</inlineHelpText>
        <label>School</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Recruiting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recruiting Events</relationshipLabel>
        <relationshipName>Recruiting_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_Affiliate__c</fullName>
        <label>Sponsor/Affiliate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recruiting Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inactive__c</columns>
        <columns>R_Event_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recruiting Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiting Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>